fix: scrollbar style

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -46,3 +46,26 @@ body {
 h5.ant-typography {
   @apply mt-3;
 }
+
+/* Scrollbar style */
+/* Customize website's scrollbar like Mac OS  */
+/* Not supported in Firefox and IE */
+@media not all and (pointer: fine) {
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: black;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #b4b4b4;
+    border-radius: 4px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #7d7d7d;
+  }
+}
